Added infinite sceoll directive

--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -33,7 +33,7 @@
                 Some of the technologies that I have trained and worked on include (but are not limited to):
             </p>
 
-            <ul class="skill-list">
+            <!-- <ul class="skill-list">
                 <li><span class="underline">Angular</span></li>
                 <li><span class="underline">HTML & CSS</span></li>
                 <li><span class="underline">Express.js</span></li>
@@ -43,7 +43,26 @@
                 <li><span class="underline">JavaScript, TypeScript</span></li>
                 <li><span class="underline">Oracle, SQL, SQLite</span></li>
                 <li><span class="underline">Git, Github</span></li>
-            </ul>
+            </ul> -->
+            <div appInfiniteScroll class="scroller" data-direction="left">
+                <ul class="tag-list scroller__inner">
+                    <li>Angular</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Express.js</li>
+                    <li>Node.js</li>
+                    <li>Python</li>
+                    <li>Bootstrap</li>
+                    <li>Material</li>
+                    <li>JavaScript</li>
+                    <li>TypeScript</li>
+                    <li>Oracle</li>
+                    <li>SQL</li>
+                    <li>SQLite</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                </ul>
+            </div>
         </div>
         <div class="col-lg-2"></div>
     </div>
