--- a/src/app/home/about-me/about-me.component.css
+++ b/src/app/home/about-me/about-me.component.css
@@ -11,15 +11,15 @@ p {
     list-style: none;
 }
 
-li {
+/* li {
     position: relative;
     margin-bottom: 0.625rem;
     padding-left: 1.25rem;
     font-size: 0.8125rem;
     cursor: pointer;
-}
+} */
 
-li::before {
+/* li::before {
     content: "\25b9";
     position: absolute;
     top: 0.25rem;
@@ -27,7 +27,7 @@ li::before {
     color: var(--text-color);
     font-size: 0.875rem;
     line-height: 0.75rem;
-}
+} */
 
 .underline {
     position: relative;
