--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -31,7 +31,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
-                    <ul class="project-skills justify-content-start">
+                    <!-- <ul class="project-skills justify-content-start">
                         <li class="ml-3">
                             <span class="underline">
                                 Angular
@@ -51,6 +51,21 @@
                             <span class="underline">
                                 CSS
                             </span>
+                        </li>
+                    </ul> -->
+
+                    <ul class="tag-list justify-content-start mt-3 mb-3">
+                        <li class="ml-3">
+                            Angular
+                        </li>
+                        <li class="ml-3">
+                            BootStrap
+                        </li>
+                        <li class="ml-3">
+                            HTML
+                        </li>
+                        <li class="ml-3">
+                           CSS
                         </li>
                     </ul>
                 </div>
@@ -90,7 +105,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 offset-lg-6 p-0">
-                    <ul class="project-skills justify-content-lg-end">
+                    <!-- <ul class="project-skills justify-content-lg-end">
                         <li class="ml-3">
                             <span class="underline">
                                 Angular
@@ -110,6 +125,21 @@
                             <span class="underline">
                                 SQLite
                             </span>
+                        </li>
+                    </ul> -->
+
+                    <ul class="tag-list justify-content-lg-end mt-3 mb-3">
+                        <li class="ml-3">
+                            Angular
+                        </li>
+                        <li class="ml-3">
+                            Node
+                        </li>
+                        <li class="ml-3">
+                            Bootstrap
+                        </li>
+                        <li class="ml-3">
+                            SQLite
                         </li>
                     </ul>
                 </div>
@@ -150,7 +180,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 p-0">
-                    <ul class="project-skills justify-content-start">
+                    <!-- <ul class="project-skills justify-content-start">
                         <li class="ml-3">
                             <span class="underline">
                                 Django
@@ -170,6 +200,21 @@
                             <span class="underline">
                                 SQLite
                             </span>
+                        </li>
+                    </ul> -->
+
+                    <ul class="tag-list justify-content-start mt-3 mb-3">
+                        <li class="ml-3">
+                            Django
+                        </li>
+                        <li class="ml-3">
+                            Bootstrap
+                        </li>
+                        <li class="ml-3">
+                            Python
+                        </li>
+                        <li class="ml-3">
+                            SQLite
                         </li>
                     </ul>
                 </div>
@@ -209,7 +254,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 offset-lg-6 p-0">
-                    <ul class="project-skills justify-content-lg-end">
+                    <!-- <ul class="project-skills justify-content-lg-end">
                         <li class="ml-3">
                             <span class="underline">
                                 Python
@@ -219,6 +264,15 @@
                             <span class="underline rounded-full">
                                 Pygame
                             </span>
+                        </li>
+                    </ul> -->
+
+                    <ul class="tag-list justify-content-lg-end mt-3 mb-3">
+                        <li class="ml-3">
+                            Python
+                        </li>
+                        <li class="ml-3">
+                            Pygame
                         </li>
                     </ul>
                 </div>
