--- a/src/styles.css
+++ b/src/styles.css
@@ -142,4 +142,70 @@ body::-webkit-scrollbar-thumb {
     /* creates padding around scroll thumb */
 }
 
-/* \scrollBar customization END */
+/* ScrollBar customization END */
+
+/* Infinite scroll Tag List START */
+.tag-list {
+    margin: 0;
+    padding-inline: 0;
+    list-style: none;
+}
+
+.tag-list li {
+    background-color: var(--accent-color);
+    color: var(--bg-color);
+    border-radius: 0.25rem;
+    box-shadow: 0 0.5rem 1rem -0.25rem var(--shadow-color);
+    font-weight: bold;
+    padding-block: 0.125rem;
+    padding-inline: 0.25rem;
+    font-size: 0.8125rem;
+}
+/* Infinite scroll Tag List END */
+
+/* Infinite Scroll START */
+.scroller {
+    max-width: 100%;
+}
+
+.scroller__inner {
+    padding-block: 1rem;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.scroller[data-animated=true] {
+    overflow: hidden;
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated=true] .scroller__inner {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+    --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+    --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+    --_animation-duration: 20s;
+}
+
+.scroller[data-speed="slow"] {
+    --_animation-duration: 60s;
+}
+
+@keyframes scroll {
+    to {
+        transform: translate(calc(-50% - .5rem));
+    }
+}
+
+/* Infinite Scroll END */
