--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ body {
     width: 100%;
     background-color: var(--bg-color);
     color: var(--text-color);
+    font-family: "Trirong", serif;
 }
 
 *,
@@ -55,6 +56,10 @@ picture {
 
 a:hover {
     color: var(--accent-color);
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: "Young Serif";
 }
 
 
