Fixed few css issues

--- a/src/app/general/footer/footer.component.html
+++ b/src/app/general/footer/footer.component.html
@@ -9,13 +9,13 @@
                         </a>
                     </li>
                     <li>
-                        <a (click)='googleAnalytics.sendAnalyticEvent("click_button", "footer", "linkedin-button")' href="https://www.linkedin.com/in/abhishekguptadelhi/" target='_blank'>
+                        <a (click)='googleAnalytics.sendAnalyticEvent("click_button", "footer", "linkedin-button")' href="https://www.linkedin.com/in/gup-abhi/" target='_blank'>
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
                 </ul>
                 <div class="footer-right-bar d-none d-md-block">
-                    <a (click)='googleAnalytics.sendAnalyticEvent("click_anchor", "footer", "mail-link")' href="mailto:agupta.engineer.email@gmail.com" target='_blank'>agupta.engineer.email@gmail.com </a>
+                    <a (click)='googleAnalytics.sendAnalyticEvent("click_anchor", "footer", "mail-link")' href="mailto:gupabhi20@gmail.com" target='_blank'>gupabhi20@gmail.com </a>
                 </div>
             </div>
         </div>
