--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -18,14 +18,25 @@
                     <div *ngIf="tab === 'TCS'" class="col-12 col-lg" data-aos="fade-up" data-aos-duration="1000">
                         <h4>System Engineer | Tata Consultancy Services</h4>
                         <h5>August, 2020 - August, 2022</h5>
-                        <p>I spearheaded the enhancement of our web application's functionality by designing and engineering high-performance RESTful APIs using Node.js and Express.js. This strategic upgrade resulted in a remarkable 20% boost in system efficiency,
-                            significantly improving the user experience.</p>
-                        <p>Leading a dynamic 3-person team, I consistently surpassed project deadlines and objectives, contributing to an impressive 15% increase in project completion rates. My exceptional leadership prowess ensured our projects remained
-                            on track, delivering results efficiently and effectively.</p>
-                        <p> I fostered a collaborative work environment, seamlessly collaborating with cross-functional teams. By harmonizing diverse ideas and delivering optimal solutions, we streamlined processes, resulting in a remarkable 25% improvement
-                            in project delivery times. This synergy drove our projects to success.</p>
-                        <p>I effectively communicated technical findings and innovative solutions to stakeholders and colleagues. This fostered a culture of growth and innovation within the organization, enabling us to stay at the forefront of industry trends
-                            and technologies.</p>
+                        <p>Engineered a single-page Angular application, contributing to a 20%
+                            improvement in system performance.</p>
+                        <p>Coordinated effectively with stakeholders, ensuring daily deliverables for the
+                            project.</p>
+                        <p> Participated in a team of 3 developers, contributing to the successful delivery
+                            of the project ahead of the deadline.</p>
+                        <p>Assisted in Node.js app deployment, learning about efficient deployment
+                            strategies to ensure zero downtime.</p>
+                        <p>Integrated mail functionality, contributing to a 25% improvement in user
+                            engagement with transactional emails.</p>
+                        <p>Gained experience in maintaining a Node.js server with robust error handling
+                            for clear front-end communication.</p>
+                        <p>Constructed a Node.js server for an Angular application, contributing to a 10%
+                            improvement in load times.</p>
+                        <p>Learned about optimizing server performance through comprehensive logging
+                            on a Node.js server.</p>
+                        <p>Boosted data retrieval efficiency with Oracle DB and REST APIs, resulting in a
+                            20% improvement.</p>
+                        <p>Ensured 100% app accessibility, enhancing user experience for all.</p>
                     </div>
 
                     <div *ngIf="tab === 'Google'" class="col-12 col-lg" data-aos="fade-up" data-aos-duration="1000">
