--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,7 @@ a, p, ul, li{
 .neon-button {
     position: relative;
     font-size: 1.5rem;
+    font-weight: bolder;
     display: inline-block;
     cursor: pointer;
     text-decoration: none;
