Updated banner and resume

--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -1,39 +1,172 @@
 <div class="container-fluid h-100">
-    <div class="row h-100" data-aos="fade-up" data-aos-duration="1000">
-        <div class="col-lg-2"></div>
-        <div class="col col-lg-8 h-100">
-            <app-heading></app-heading>
-            <br>
-            <p>
-                Experienced Full Stack Developer with a dynamic 2-year track record of crafting exceptional solutions. I am a Subject Matter Expert (SME) in Angular. During my tenure, I consistently demonstrated unwavering dedication to my work, ensuring on-time completion
-                of critical assignments. My profound knowledge of UI development with Angular Script has been a cornerstone of my contributions.
-            </p>
-            <p>
-                In addition to my technical expertise, I possess strong analytical skills and a knack for problem-solving. These qualities have been pivotal in overcoming challenges and driving project success. As my manager noted, I am valued as a key resource for any
-                project or team, and I'm committed to maintaining this standard in my future assignments.
-            </p>
+  <div class="row h-100" data-aos="fade-up" data-aos-duration="1000">
+    <div class="col-lg-2"></div>
+    <div class="col col-lg-8 h-100">
+      <app-heading></app-heading>
+      <br />
+      <section>
+        Innovative Full Stack Developer with 2+ years in the software
+        engineering space. I helped company like TATA Consultancy Services
+        improve their web performance and user engagement by significant
+        margins.
+      </section>
+      <br />
+      <section class="label">Some examples of my results include:</section>
+      <br />
+      <p>
+        Engineered a single-page Angular application at TATA Consultancy
+        Services, contributing to a
+        <em class="highlight">20% improvement in system performance</em>.
+      </p>
+      <p>
+        Assisted in Node.js app deployment, learning about efficient deployment
+        strategies to ensure <em class="highlight">zero downtime</em>.
+      </p>
 
-            <p>
-                I take pride in being in the top 3% on TryHackMe, a testament to my passion for cybersecurity and my continuous quest for excellence. This achievement reflects my dedication to staying at the forefront of this ever-evolving field.
-            </p>
+      <p>
+        Integrated mail functionality, contributing to a
+        <em class="highlight">25% improvement in user engagement</em> with
+        transactional emails.
+      </p>
 
-            <a class="link" (click)='googleAnalytics.sendAnalyticEvent("click_link", "about-me", "tryhackme-link")' href="https://tryhackme.com/p/zang2012" target="_blank">
-                Link to my TRYHACKME profile
-            </a>
+      <p>
+        Constructed a Node.js server for an Angular application, contributing to
+        a <em class="highlight">20% improvement in system performance</em>.
+      </p>
 
-            <br>
-            <br>
+      <p>
+        Boosted data retrieval efficiency with Oracle DB and REST APIs,
+        resulting in a <em class="highlight">20% improvement</em>.
+      </p>
 
-            <p>
-                Currently pursuing a Master of Applied Computer Science at Concordia University, I aim to blend my hands-on expertise with advanced education for maximum impact in the tech landscape. Your best wishes are greatly appreciated as I embark on my journey
-                to continuously excel in my career.
-            </p>
+      <br />
 
-            <p>
-                Some of the technologies that I have trained and worked on include (but are not limited to):
-            </p>
+      <section class="label">
+        In terms of cultural fit and extracurricular activities:
+      </section>
 
-            <!-- <ul class="skill-list">
+      <br />
+
+      <section>
+        Actively maintain a GitHub profile with various projects and
+        contributions. Participate in cyber-security challenges on TryHackMe. I
+        get excited about opportunities where I can leverage my full-stack
+        development skills to solve complex problems and contribute to team
+        success. I am particularly interested in roles that allow me to continue
+        learning and growing in the field of web development and software
+        engineering.
+      </section>
+
+      <br />
+
+      <div class="container text-center">
+        <a
+          id="thm_badge"
+          class="thm_margin"
+          href="https://tryhackme.com/p/zang2012"
+          target="_blank"
+        >
+          <div style="width: auto; border-radius: 4px; margin-right: 0px">
+            <div
+              class="thm_avatar"
+              style="
+                background-image: url(https://tryhackme-images.s3.amazonaws.com/user-avatars/977b4b67ed49d2436c2c71a207237753.jpeg);
+              "
+            ></div>
+          </div>
+          <div
+            style="
+              margin-left: 25px;
+              width: 220px;
+              height: 56px;
+              background-color: #343c42;
+              border-radius: 5px;
+              text-align: left;
+              background-image: url(https://assets.tryhackme.com/img/thm_logo_only.svg);
+              background-size: 23px 23px;
+              background-position: right 5px bottom 5px;
+              background-repeat: no-repeat;
+            "
+          >
+            <div
+              class="thm_font"
+              style="
+                box-sizing: content-box;
+                height: 50px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                padding-left: 8px;
+                padding-top: 5px;
+              "
+            >
+              <p class="thm_line" style="margin-bottom: 3px">
+                <span class="thm_nickname">zang2012</span>
+                <span class="thm_rank">[0xC][Guru]</span><br />
+              </p>
+              <p
+                class="thm_line"
+                style="margin-bottom: 1px; display: flex; align-items: center"
+              >
+                <img
+                  class="thm_icon thm_mr"
+                  src="https://assets.tryhackme.com/img/badges/trophy.png"
+                  alt="trophy"
+                />
+                <span class="thm_stat thm_mr">13820</span>
+                <img
+                  class="thm_icon thm_mr"
+                  src="https://assets.tryhackme.com/img/badges/door.png"
+                  alt="door"
+                />
+                <span class="thm_stat thm_mr">137</span>
+                <img
+                  class="thm_icon thm_mr"
+                  src="https://assets.tryhackme.com/img/badges/target.png"
+                  alt="target"
+                />
+                <span class="thm_stat">14</span><br />
+              </p>
+              <p class="thm_line">
+                <a
+                  href="https://www.tryhackme.com"
+                  target="_blank"
+                  class="thm_link"
+                  >tryhackme.com</a
+                >
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <!-- <br />
+      <br />
+
+      <a
+        class="link"
+        (click)="
+          googleAnalytics.sendAnalyticEvent(
+            'click_link',
+            'about-me',
+            'tryhackme-link'
+          )
+        "
+        href="https://tryhackme.com/p/zang2012"
+        target="_blank"
+      >
+        Link to my TRYHACKME profile
+      </a> -->
+
+      <!-- <br /> -->
+      <br />
+
+      <section class="label">
+        Some of the technologies that I have trained and worked on include (but
+        are not limited to):
+      </section>
+
+      <!-- <ul class="skill-list">
                 <li><span class="underline">Angular</span></li>
                 <li><span class="underline">HTML & CSS</span></li>
                 <li><span class="underline">Express.js</span></li>
@@ -44,26 +177,26 @@
                 <li><span class="underline">Oracle, SQL, SQLite</span></li>
                 <li><span class="underline">Git, Github</span></li>
             </ul> -->
-            <div appInfiniteScroll class="scroller" data-direction="left">
-                <ul class="tag-list scroller__inner">
-                    <li>Angular</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Express.js</li>
-                    <li>Node.js</li>
-                    <li>Python</li>
-                    <li>Bootstrap</li>
-                    <li>Material</li>
-                    <li>JavaScript</li>
-                    <li>TypeScript</li>
-                    <li>Oracle</li>
-                    <li>SQL</li>
-                    <li>SQLite</li>
-                    <li>Git</li>
-                    <li>Github</li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-lg-2"></div>
+      <div appInfiniteScroll class="scroller" data-direction="left">
+        <ul class="tag-list scroller__inner">
+          <li>Angular</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Express.js</li>
+          <li>Node.js</li>
+          <li>Python</li>
+          <li>Bootstrap</li>
+          <li>Material</li>
+          <li>JavaScript</li>
+          <li>TypeScript</li>
+          <li>Oracle</li>
+          <li>SQL</li>
+          <li>SQLite</li>
+          <li>Git</li>
+          <li>Github</li>
+        </ul>
+      </div>
     </div>
+    <div class="col-lg-2"></div>
+  </div>
 </div>
