--- a/src/app/home/about-me/about-me.component.css
+++ b/src/app/home/about-me/about-me.component.css
@@ -1,14 +1,14 @@
-p {
-    font-size: 1.125rem;
-}
+/* p {
+  font-size: 1.125rem;
+} */
 
 .skill-list {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(140px, 200px));
-    overflow: hidden;
-    padding: 0;
-    margin: 20px 0 0;
-    list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(140px, 200px));
+  overflow: hidden;
+  padding: 0;
+  margin: 20px 0 0;
+  list-style: none;
 }
 
 /* li {
@@ -30,28 +30,181 @@ p {
 } */
 
 .underline {
-    position: relative;
-    padding-bottom: 0.625rem;
+  position: relative;
+  padding-bottom: 0.625rem;
 }
 
 .underline::after {
-    content: "";
-    position: absolute;
-    border-bottom: 2px solid var(--accent-color);
-    height: 1px;
-    width: 0%;
-    bottom: 3px;
-    display: block;
-    left: 50%;
-    transition: width 0.3s ease 0s, left .3s ease 0s;
+  content: "";
+  position: absolute;
+  border-bottom: 2px solid var(--accent-color);
+  height: 1px;
+  width: 0%;
+  bottom: 3px;
+  display: block;
+  left: 50%;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
 }
 
 .underline:hover::after {
-    width: 100%;
-    left: 0;
+  width: 100%;
+  left: 0;
 }
 
 .tryhackme-img {
-    height: 8rem;
-    width: 30rem;
+  height: 8rem;
+  width: 30rem;
+}
+
+p {
+  position: relative;
+  padding-left: 1.25rem;
+}
+
+p::before {
+  content: "\25b9";
+  position: absolute;
+  top: 0.4rem;
+  left: 0;
+  color: var(--accent-color);
+  font-size: 0.875rem;
+  line-height: 0.75rem;
+}
+
+.thm_margin {
+  margin: 5px;
+}
+
+#thm_badge {
+  width: 210px;
+  display: inline-table;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#thm_badge:hover {
+  cursor: pointer;
+}
+
+.thm_avatar {
+  display: block;
+  width: 50px;
+  height: 50px;
+  float: left;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 50%;
+  box-sizing: content-box; /* Needed for border to stop changing image width*/
+  border: 3px solid #88cc14;
+  background-color: #343c42;
+  box-shadow: inset 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
+  object-fit: cover;
+  box-shadow: 0 0px 3px 0px #303030;
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkY4P5ICox8Kq3LLUNMylGO4.woff2)
+    format("woff2");
+}
+
+.thm_font {
+  font-family: "Roboto", monospace;
+}
+
+.thm_nickname {
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  text-shadow: #000 0 0 6px;
+}
+
+.thm_stat {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 14px;
+}
+
+.thm_icon {
+  opacity: 0.85;
+  height: 16px;
+}
+
+@keyframes flicker {
+  0%,
+  19.999%,
+  22%,
+  62.999%,
+  64%,
+  64.999%,
+  70%,
+  100% {
+    opacity: 0.99;
+    text-shadow: -1px -1px 0 var(--shadow-color), 1px -1px 0 var(--shadow-color),
+      -1px 1px 0 var(--shadow-color), 1px 1px 0 var(--shadow-color), 0 -2px 8px,
+      0 0 2px, 0 0 5px #ff7e00, 0 0 15px #ff4444, 0 0 2px #ff7e00,
+      0 2px 3px #000;
+  }
+
+  20%,
+  21.999%,
+  63%,
+  63.999%,
+  65%,
+  69.999% {
+    opacity: 0.4;
+    text-shadow: none;
+  }
+}
+
+.thm_rank {
+  color: #ffffff;
+  font-size: 11px;
+}
+
+.thm_line {
+  line-height: 12px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.thm_link {
+  color: #fff;
+  font-size: 0.6em;
+  text-decoration: none;
+  animation: flicker 6s infinite;
+}
+
+.thm_link:hover {
+  color: #fff;
+  font-size: 0.6em;
+  text-decoration: underline;
+}
+
+.thm_link:visited {
+  color: #fff;
+}
+
+.thm_mr {
+  margin-right: 8px;
+}
+
+.thm_for_img {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 14px;
+  position: relative;
+  top: -3px;
+  margin-bottom: 5px;
+}
+
+.label {
+  color: var(--accent-color);
 }
