--- a/src/app/home/banner/banner.component.css
+++ b/src/app/home/banner/banner.component.css
@@ -1,39 +1,38 @@
 :host {
-    cursor: move;
-    min-height: inherit;
-    --gradient-angle: 0deg;
+  cursor: move;
+  min-height: inherit;
+  --gradient-angle: 0deg;
 }
 
 .main-container,
 .row {
-    min-height: inherit;
+  min-height: inherit;
 }
 
 @property --gradient-angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
 }
 
 .grid {
-    display: grid;
-    place-items: center;
-    align-items: center;
+  display: grid;
+  place-items: center;
+  align-items: center;
 }
 
 .content {
-    position: relative;
-    min-height: 20rem;
-    min-width: 20rem;
-    height: 30rem;
-    width: 35rem;
-    padding: 2rem;
-    background-color: var(--bg-color);
-    transform: perspective(5000px) rotateY(var(--rotateY)) rotateX(var(--rotateX));
-    border-radius: 1rem;
-    transform-style: preserve-3d;
+  position: relative;
+  min-height: 20rem;
+  min-width: 20rem;
+  height: 30rem;
+  width: 35rem;
+  padding: 2rem;
+  background-color: var(--bg-color);
+  transform: perspective(5000px) rotateY(var(--rotateY)) rotateX(var(--rotateX));
+  border-radius: 1rem;
+  transform-style: preserve-3d;
 }
-
 
 /* .content>* {
     text-shadow: 0 0 0.3em var(--accent-color);
@@ -41,125 +40,132 @@
 
 .content::before,
 .content::after {
-    content: "";
-    position: absolute;
-    border-radius: inherit;
+  content: "";
+  position: absolute;
+  border-radius: inherit;
 }
 
 .content::before {
-    inset: 0.75rem;
-    background: black;
-    transform: translateZ(-49px);
-    filter: blur(15px);
-    opacity: 0.5;
+  inset: 0.75rem;
+  background: black;
+  transform: translateZ(-49px);
+  filter: blur(15px);
+  opacity: 0.5;
 }
 
 .content::after {
-    inset: -1.25rem;
-    background: conic-gradient(from var(--gradient-angle), var(--gradient-color-1), var(--gradient-color-2), var(--gradient-color-1));
-    transform: translateZ(-50px);
-    border-radius: inherit;
-    animation: rotation 20s linear infinite;
-    z-index: -1;
-    filter: blur(0.5rem);
+  inset: -1.25rem;
+  background: conic-gradient(
+    from var(--gradient-angle),
+    var(--gradient-color-1),
+    var(--gradient-color-2),
+    var(--gradient-color-1)
+  );
+  transform: translateZ(-50px);
+  border-radius: inherit;
+  animation: rotation 20s linear infinite;
+  z-index: -1;
+  filter: blur(0.5rem);
 }
 
 @keyframes rotation {
-    0% {
-        --gradient-angle: 0deg;
-    }
-    100% {
-        --gradient-angle: 360deg;
-    }
+  0% {
+    --gradient-angle: 0deg;
+  }
+  100% {
+    --gradient-angle: 360deg;
+  }
 }
 
 #name {
-    font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 #role,
 #hobby {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 .image-div {
-    height: 15rem;
-    width: 25rem;
-    clip-path: circle(35% at 50% 50%);
-    position: relative;
-    /* background: url("../../../assets/GSA-13-min.jpg"); */
+  height: 15rem;
+  width: 25rem;
+  clip-path: circle(35% at 50% 50%);
+  position: relative;
+  /* background: url("../../../assets/GSA-13-min.jpg"); */
 }
 
 .image {
-    height: inherit;
-    width: inherit;
-    border-radius: inherit;
+  height: inherit;
+  width: inherit;
+  border-radius: inherit;
 }
 
 .neon-wrapper {
-    display: inline-flex;
-    filter: brightness(200%);
-    overflow: hidden;
+  display: inline-flex;
+  filter: brightness(200%);
+  overflow: hidden;
 }
 
 .txt {
-    background-color: var(--bg-color);
-    font-weight: 500;
-    position: relative;
+  background-color: var(--bg-color);
+  font-weight: 500;
+  position: relative;
 }
 
 .txt::before {
-    content: "I am Abhishek Gupta.";
-    position: absolute;
-    mix-blend-mode: difference;
-    filter: blur(0.025rem);
+  content: "I am Abhishek Gupta.";
+  position: absolute;
+  mix-blend-mode: difference;
+  filter: blur(0.025rem);
 }
 
 .gradient {
-    background: linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
-    background-size: 400%;
-    background-position: left;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    mix-blend-mode: multiply;
-    animation: text-gradient 15s alternate infinite;
+  background: linear-gradient(
+    45deg,
+    var(--gradient-color-1),
+    var(--gradient-color-2)
+  );
+  background-size: 400%;
+  background-position: left;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  animation: text-gradient 15s alternate infinite;
 }
 
 @keyframes text-gradient {
-    0% {
-        background-position: left;
-    }
-    100% {
-        background-position: right;
-    }
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
-
 
 /* Extra small devices (phones, 600px and down) */
 
 @media only screen and (max-width: 600px) {
-    .inner-content {
-        height: 25rem;
-        width: 17rem;
-    }
-    .image-div {
-        height: 10rem;
-        width: 13rem;
-        clip-path: circle(35% at 45% 50%);
-    }
+  .inner-content {
+    height: 25rem;
+    width: 17rem;
+  }
+  .image-div {
+    height: 10rem;
+    width: 13rem;
+    clip-path: circle(35% at 45% 50%);
+  }
 }
-
 
 /* Medium devices (landscape tablets, 768px and up) */
 
 @media only screen and (min-width: 600px) and (max-width: 768px) {
-    .inner-content {
-        width: 17rem;
-    }
-    .image-div {
-        height: 10rem;
-    }
+  .inner-content {
+    width: 17rem;
+  }
+  .image-div {
+    height: 10rem;
+  }
 }
