Updated experience and education modules

--- a/src/app/home/education/education.component.html
+++ b/src/app/home/education/education.component.html
@@ -49,12 +49,13 @@
               Master of Applied Computer Science
               <em class="highlight">|</em> Concordia University
             </h4>
-            <h5>September, 2022 - August, 2024</h5>
+            <h5>September, 2022 - June, 2024</h5>
             <p>Credits earned: 34</p>
             <p>
               Relevant Courses: Algorithm Design Techniques, Distributed System
               Design, Computer Networks, Software Design Methodologies, Theory
-              of Computer Science
+              of Computer Science, Artifical Intelligence, Programming & Problem
+              Solving.
             </p>
           </div>
 
