--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -39,43 +39,52 @@
             </h4>
             <h5>August, 2020 - August, 2022</h5>
             <p>
-              Engineered a single-page Angular application, contributing to a
-              20% improvement in system performance.
+              Revamped a legacy application into a single-page application,
+              <em class="highlight">reducing</em> the
+              <em class="highlight">load time by 30%</em>.
             </p>
             <p>
-              Coordinated effectively with stakeholders, ensuring daily
-              deliverables for the project.
+              Coordinated effectively with stakeholders, ensuring
+              <em class="highlight">daily deliverables</em> for the project.
             </p>
             <p>
-              Participated in a team of 3 developers, contributing to the
-              successful delivery of the project ahead of the deadline.
+              Directed a team of 3 professionals,
+              <em class="highlight">successfully completing</em> 2 project
+              deliverables <em class="highlight">ahead of schedule</em>.
             </p>
             <p>
-              Assisted in Node.js app deployment, learning about efficient
-              deployment strategies to ensure zero downtime.
+              Implemented a screenshot functionality,
+              <em class="highlight">streamlining</em> defect reporting and task
+              requests to the Jira tool, <em class="highlight">increasing</em>
+              productivity by 20%.
             </p>
             <p>
-              Integrated mail functionality, contributing to a 25% improvement
-              in user engagement with transactional emails.
+              Integrated a mail transaction feature, boosting user engagement on
+              the tool by 25%.
             </p>
             <p>
-              Gained experience in maintaining a Node.js server with robust
-              error handling for clear front-end communication.
+              <em class="highlight">Architected</em> a resilient Node.js server
+              infrastructure, enhancing system stability by
+              <em class="highlight">reducing server crashes</em> by 80%.
             </p>
             <p>
-              Constructed a Node.js server for an Angular application,
-              contributing to a 10% improvement in load times.
+              Implemented error handling mechanisms to
+              <em class="highlight">maintain database connections on errors</em
+              >, thereby improving application uptime by 99.9%.
             </p>
             <p>
-              Learned about optimizing server performance through comprehensive
-              logging on a Node.js server.
+              Managed deployments of the application on client hosting
+              environments, ensuring <em class="highlight">99.9% uptime</em>.
             </p>
             <p>
-              Boosted data retrieval efficiency with Oracle DB and REST APIs,
-              resulting in a 20% improvement.
+              Managed application's database tables and queries,
+              <em class="highlight">enhancing data retrieval</em> efficiency by
+              30% and <em class="highlight">reducing query response</em> time by
+              20%.
             </p>
             <p>
-              Ensured 100% app accessibility, enhancing user experience for all.
+              Ensured 100% app accessibility,
+              <em class="highlight">enhancing</em> user experience for all.
             </p>
           </div>
 
