--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,30 +1,30 @@
 <div class="main-container container-fluid p-2">
-    <div class="row justify-content-center align-content-lg-center">
-        <div class="col">
-            <div class="container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="row justify-content-center">
-                    <div appEffectDirective class="content text-center col-8 grid">
-                        <div class="inner-content">
-                            <div class="container-fluid m-0 p-0">
-                                <div class="row justify-content-center p-0 m-0">
-                                    <div class="col image-div" alt="image">
-                                        <img class="image" src="./assets/me.jpg" alt="image">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="neon-wrapper">
-                                <span class="txt" id="name">I am Abhishek Gupta.</span>
-                                <span class="gradient"></span>
-                                <span class="dodge"></span>
-                            </div>
-                            <br />
-                            <span id="role">Full Stack Developer.</span>
-                            <br />
-                            <span id="hobby">Cybersecurity Enthusiastic.</span>
-                        </div>
-                    </div>
+  <div class="row justify-content-center align-content-lg-center">
+    <div class="col">
+      <div class="container" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row justify-content-center">
+          <div class="content text-center col-8 grid">
+            <div class="inner-content">
+              <div class="container-fluid m-0 p-0">
+                <div class="row justify-content-center p-0 m-0">
+                  <div class="col image-div" alt="image">
+                    <img class="image" src="./assets/me.jpg" alt="image" />
+                  </div>
                 </div>
+              </div>
+              <div class="neon-wrapper">
+                <span class="txt" id="name">I am Abhishek Gupta.</span>
+                <span class="gradient"></span>
+                <span class="dodge"></span>
+              </div>
+              <br />
+              <span id="role">Full Stack Developer.</span>
+              <br />
+              <span id="hobby">Cybersecurity Enthusiastic.</span>
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
