--- a/src/app/shared/components/heading/heading.component.css
+++ b/src/app/shared/components/heading/heading.component.css
@@ -1,20 +1,25 @@
 h3 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    position: relative;
+  font-size: 1.5rem;
+  font-weight: 500;
+  position: relative;
 }
 
 h3::after {
-    content: "";
-    position: absolute;
-    top: 60%;
-    width: 50%;
-    background-color: var(--accent-color);
-    opacity: 0.8;
-    height: 0.1rem;
-    margin-left: 0.625rem;
+  content: "";
+  position: absolute;
+  top: 60%;
+  width: 50%;
+  background-color: var(--accent-color);
+  opacity: 0.8;
+  height: 0.1rem;
+  margin-left: 0.625rem;
 }
 
 .title-number {
-    color: var(--accent-color);
+  color: var(--accent-color);
+  font-size: 1.75rem;
+}
+
+.title-text {
+  font-size: 1.75rem;
 }
